commiting the rest of the files in git javascript and index

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>testing</title>
 </head>
 <body>
-
+<a href="htttp://google.com">google is here right now</a>
+<p>hello world</p>
 </body>
 </html>
