--- a/index.html
+++ b/index.html
@@ -5,9 +5,22 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
     <title>testing</title>
 </head>
 <body>
-
+<main>
+    <div class="container">
+        <div>
+            <div class="box box-half red"></div>
+            <div class="box box-half yellow"></div>
+        </div>
+        <div>
+            <div class="box box-third blue"></div>
+            <div class="box box-third"></div>
+            <div class="box box-third blue"></div>
+        </div>
+    </div>
+</main>
 </body>
 </html>
